--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "swagger-typed-express-docs-test",
-  "version": "0.0.1-alpha",
+  "version": "0.0.1-alpha.1",
   "description": "Simple express runtime parser and documentation swagger generator with 100% support of Typescript static types",
   "repository": {
     "type": "git",
