--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "clean": "tsc --build --clean",
     "lint": "eslint \"{src,tests}/**/*.{js,ts}\"",
     "lint:fix": "eslint \"{src,tests}/**/*{js,ts}\" --fix",
-    "dev": "ts-node-dev --respawn example/index.ts",
+    "dev": "ts-node-dev --respawn example/server.ts",
     "ts:check-types": "tsc",
     "ts:check-types:watch": "tsc --watch",
     "check-code": "npm run test && npm run lint && npm run ts:check-types"
