--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,7 +31,8 @@
     "declaration": true,
   },
   "include": [
-    "./index.d.ts",
-    "**/*.ts"
+    // we have to change path when we build lib and when we test lib in the /example directory...
+    // TODO: resolve it somehow
+    "src/**/*"
   ]
 }
