--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "swagger-typed-express-docs-test",
+  "name": "swagger-typed-express-docs",
   "version": "0.0.1-beta.1",
   "description": "Simple express runtime parser and documentation swagger generator with 100% support of Typescript static types",
   "keywords": [
@@ -42,6 +42,7 @@
   "dependencies": {
     "@types/express": "^4.17.12",
     "express-query-parser": "^1.2.0",
+    "nodemon": "^2.0.12",
     "yup": "^0.32.9"
   },
   "devDependencies": {
