--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "swagger-typed-express-docs",
-  "version": "0.3.1",
+  "version": "0.3.2",
   "description": "Simple express runtime parser and documentation swagger generator with 100% support of Typescript static types",
   "keywords": [
     "express",
@@ -26,18 +26,20 @@
   },
   "types": "dist/index.d.ts",
   "scripts": {
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "prepare": "npm run clean && npm run build",
     "build": "tsc",
+    "check-code": "npm run test && npm run lint && npm run ts:check-types",
     "clean": "tsc --build --clean",
+    "dev": "ts-node-dev --respawn example/server.ts",
     "lint": "eslint \"{src,tests}/**/*.{js,ts}\"",
     "lint:fix": "eslint \"{src,tests}/**/*{js,ts}\" --fix",
-    "dev": "ts-node-dev --respawn example/server.ts",
+    "l": "npm run lint:fix",
+    "prepare": "npm run clean && npm run build",
+    "publish-lib": "npm run prepare && npm publish",
+    "test": "jest",
+    "test:watch": "jest --watch",
     "ts:check-types": "tsc",
     "ts:check-types:watch": "tsc --watch",
-    "check-code": "npm run test && npm run lint && npm run ts:check-types",
-    "publish-lib": "npm run prepare && npm publish"
+    "ts:generate-api": "ts-node npm_scripts/generate-ts-types.ts"
   },
   "dependencies": {
     "yup": "^1.3.1"
@@ -47,13 +49,14 @@
     "@types/jest": "^29.5.5",
     "@types/node": "^14.14.41",
     "@types/swagger-ui-express": "^4.1.2",
-    "@typescript-eslint/eslint-plugin": "^4.18.0",
-    "@typescript-eslint/parser": "^4.18.0",
+    "@typescript-eslint/eslint-plugin": "^6.7.5",
+    "@typescript-eslint/parser": "^6.7.5",
     "eslint": "^7.22.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-prettier": "^3.3.1",
     "express-query-parser": "^1.3.3",
     "jest": "^29.7.0",
+    "openapi-typescript": "^3.4.1",
     "nodemon": "^3.0.1",
     "prettier": "^2.2.1",
     "swagger-ui-express": "^4.1.6",
