--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -29,5 +29,8 @@
   "editor.codeActionsOnSave": {
     "source.fixAll.eslint": true
   },
-  "cSpell.words": []
+  "cSpell.words": [
+    "asynciterable",
+    "codegen"
+  ]
 }
