--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "target": "es5",
-    "lib": ["esnext", "es2018.promise", "es2017", "dom", "esnext.asynciterable"],
+    "lib": ["esnext", "es2018.promise", "es2017", "dom", "esnext.asynciterable", "es2021"],
     "allowJs": true,
     "downlevelIteration": true,
     "skipLibCheck": true,
