--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "swagger-typed-express-docs",
+	"name": "openapi-zod-typed-express",
 	"version": "0.9.0",
 	"description": "Simple express runtime parser and documentation swagger generator with 100% support of Typescript static types",
 	"types": "dist/index.d.ts",
@@ -32,6 +32,7 @@
 		"@types/express": "^5.0.0",
 		"@types/jest": "^29.5.5",
 		"@types/node": "^14.14.41",
+		"@types/supertest": "^6.0.3",
 		"@types/swagger-ui-express": "^4.1.2",
 		"express-query-parser": "^1.3.3",
 		"jest": "^29.7.0",
