--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "openapi-zod-typed-express",
-	"version": "0.9.0",
+	"version": "0.1.0",
 	"description": "Simple express runtime parser and documentation swagger generator with 100% support of Typescript static types",
 	"types": "dist/index.d.ts",
 	"scripts": {
@@ -22,13 +22,7 @@
 		"format": "biome format --write .",
 		"format:check": "biome format ."
 	},
-	"dependencies": {
-		"supertest": "^7.1.4",
-		"tsd": "^0.33.0",
-		"uuid": "^11.1.0",
-		"yup": "^1.6.1",
-		"zod": "^4.0.17"
-	},
+	"dependencies": {},
 	"devDependencies": {
 		"@biomejs/biome": "^2.2.0",
 		"@types/express": "^5.0.0",
@@ -43,10 +37,14 @@
 		"swagger-ui-express": "^4.1.6",
 		"ts-jest": "^29.1.1",
 		"ts-node-dev": "^2.0.0",
-		"typescript": "^5.2.2"
+		"typescript": "^5.2.2",
+		"supertest": "^7.1.4",
+		"tsd": "^0.33.0",
+		"uuid": "^11.1.0"
 	},
 	"peerDependencies": {
-		"express": "^4.21.2"
+		"express": "^4.21.2",
+		"zod": "^4.0.17"
 	},
 	"keywords": [
 		"express",
@@ -54,6 +52,9 @@
 		"openapi",
 		"documentation",
 		"inferring",
+		"zod",
+		"infer",
+		"validation",
 		"http",
 		"runtime-validation"
 	],
