--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,33 +1,24 @@
 {
-	"typescript.tsdk": "node_modules/typescript/lib",
-	"eslint.autoFixOnSave": true,
-	"eslint.validate": [
-		"javascript",
-		"javascriptreact",
-		{
-			"language": "typescript",
-			"autoFix": true
-		},
-		{
-			"language": "typescriptreact",
-			"autoFix": true
-		}
-	],
-	"editor.formatOnSave": true,
-	"[javascript]": {
-		"editor.formatOnSave": false
-	},
-	"[javascriptreact]": {
-		"editor.formatOnSave": false
-	},
-	"[typescript]": {
-		"editor.formatOnSave": false
-	},
-	"[typescriptreact]": {
-		"editor.formatOnSave": false
-	},
-	"editor.codeActionsOnSave": {
-		"source.fixAll.eslint": "explicit"
-	},
-	"cSpell.words": ["asynciterable", "codegen", "Jakub", "Švehla"]
+  "typescript.tsdk": "node_modules/typescript/lib",
+
+  "editor.formatOnSave": true,
+  "editor.defaultFormatter": "biomejs.biome",
+
+  "editor.codeActionsOnSave": {
+    "source.fixAll": "explicit"
+  },
+
+  "[javascript]": {
+    "editor.defaultFormatter": "biomejs.biome"
+  },
+  "[javascriptreact]": {
+    "editor.defaultFormatter": "biomejs.biome"
+  },
+  "[typescript]": {
+    "editor.defaultFormatter": "biomejs.biome"
+  },
+  "[typescriptreact]": {
+    "editor.defaultFormatter": "biomejs.biome"
+  },
+  "cSpell.words": ["asynciterable", "codegen", "Jakub", "Švehla", "ztransform"]
 }
