--- a/package.json
+++ b/package.json
@@ -1,75 +1,75 @@
 {
-	"name": "openapi-zod-typed-express",
-	"version": "0.1.0",
-	"description": "Simple express runtime parser and documentation swagger generator with 100% support of Typescript static types",
-	"types": "dist/index.d.ts",
-	"scripts": {
-		"build": "tsc",
-		"check-code": "npm run test && npm run lint && npm run ts:check-types",
-		"clean": "tsc --build --clean",
-		"dev": "ts-node-dev --respawn example/server.ts",
-		"dev:router": "ts-node-dev --respawn example/express-router-example.ts",
-		"l": "npm run lint:fix",
-		"lint": "biome check .",
-		"lint:fix": "biome check --write .",
-		"prepare": "npm run clean && npm run build",
-		"publish-lib": "npm run prepare && npm publish",
-		"test": "jest",
-		"test:watch": "jest --watch",
-		"ts:check-types": "tsc",
-		"ts:check-types:watch": "tsc --watch",
-		"ts:generate-api": "ts-node npm_scripts/generate-ts-types.ts",
-		"format": "biome format --write .",
-		"format:check": "biome format ."
-	},
-	"dependencies": {},
-	"devDependencies": {
-		"@biomejs/biome": "^2.2.0",
-		"@types/express": "^5.0.0",
-		"@types/jest": "^29.5.5",
-		"@types/node": "^14.14.41",
-		"@types/supertest": "^6.0.3",
-		"@types/swagger-ui-express": "^4.1.2",
-		"express-query-parser": "^1.3.3",
-		"jest": "^29.7.0",
-		"nodemon": "^3.0.1",
-		"openapi-typescript": "^3.4.1",
-		"swagger-ui-express": "^4.1.6",
-		"ts-jest": "^29.1.1",
-		"ts-node-dev": "^2.0.0",
-		"typescript": "^5.2.2",
-		"supertest": "^7.1.4",
-		"tsd": "^0.33.0",
-		"uuid": "^11.1.0"
-	},
-	"peerDependencies": {
-		"express": "^4.21.2",
-		"zod": "^4.0.17"
-	},
-	"keywords": [
-		"express",
-		"typescript",
-		"openapi",
-		"documentation",
-		"inferring",
-		"zod",
-		"infer",
-		"validation",
-		"http",
-		"runtime-validation"
-	],
-	"repository": {
-		"type": "git",
-		"url": "https://github.com/Svehla/openapi-typed-express-docs"
-	},
-	"license": "MIT",
-	"author": "Lukas Dadak",
-	"contributors": [
-		"Lukas Dadak",
-		"Jakub Švehla"
-	],
-	"main": "dist/index.js",
-	"browser": {
-		"fs": false
-	}
+  "name": "openapi-zod-typed-express",
+  "version": "0.1.0",
+  "description": "Simple express runtime parser and documentation swagger generator with 100% support of Typescript static types",
+  "types": "dist/index.d.ts",
+  "scripts": {
+    "build": "tsc",
+    "check-code": "npm run test && npm run lint && npm run ts:check-types",
+    "clean": "tsc --build --clean",
+    "dev": "ts-node-dev --respawn example/server.ts",
+    "dev:router": "ts-node-dev --respawn example/express-router-example.ts",
+    "l": "npm run lint:fix",
+    "lint": "biome check",
+    "lint:fix": "biome check --write .",
+    "prepare": "npm run clean && npm run build",
+    "publish-lib": "npm run prepare && npm publish",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "ts:check-types": "tsc",
+    "ts:check-types:watch": "tsc --watch",
+    "ts:generate-api": "ts-node npm_scripts/generate-ts-types.ts",
+    "format": "biome format --write .",
+    "format:check": "biome format ."
+  },
+  "dependencies": {},
+  "devDependencies": {
+    "@biomejs/biome": "^2.2.0",
+    "@types/express": "^5.0.0",
+    "@types/jest": "^29.5.5",
+    "@types/node": "^14.14.41",
+    "@types/supertest": "^6.0.3",
+    "@types/swagger-ui-express": "^4.1.2",
+    "express-query-parser": "^1.3.3",
+    "jest": "^29.7.0",
+    "nodemon": "^3.0.1",
+    "openapi-typescript": "^3.4.1",
+    "swagger-ui-express": "^4.1.6",
+    "ts-jest": "^29.1.1",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.2.2",
+    "supertest": "^7.1.4",
+    "tsd": "^0.33.0",
+    "uuid": "^11.1.0"
+  },
+  "peerDependencies": {
+    "express": "^4.21.2",
+    "zod": "^4.0.17"
+  },
+  "keywords": [
+    "express",
+    "typescript",
+    "openapi",
+    "documentation",
+    "inferring",
+    "zod",
+    "infer",
+    "validation",
+    "http",
+    "runtime-validation"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Svehla/openapi-typed-express-docs"
+  },
+  "license": "MIT",
+  "author": "Lukas Dadak",
+  "contributors": [
+    "Lukas Dadak",
+    "Jakub Švehla"
+  ],
+  "main": "dist/index.js",
+  "browser": {
+    "fs": false
+  }
 }
